--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "save": "^2.9.0",
-    "yarn": "^1.22.22"
+    "yarn": "^1.22.22",
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
