--- a/package.json
+++ b/package.json
@@ -9,35 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "-": "^0.0.1",
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "axios": "^1.7.7",
     "date-fns": "^4.1.0",
-    "expo": "~51.0.38",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "expo": "^52.0.0",
+    "expo-cli": "^6.3.12",
+    "expo-font": "~13.0.1",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-location": "~18.0.1",
+    "expo-status-bar": "~2.0.0",
+    "g": "^2.0.1",
+    "projeto": "file:",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-calendars": "^1.1307.0",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-navigation-bar-color": "^2.0.2",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.13",
     "save": "^2.9.0",
-    "yarn": "^1.22.22",
-    "expo-location": "~17.0.1"
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
     "react-native-svg-transformer": "^1.5.0"
   },
   "private": true
