--- a/package.json
+++ b/package.json
@@ -4,24 +4,28 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "-": "^0.0.1",
     "@expo/metro-runtime": "~4.0.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "date-fns": "^4.1.0",
     "expo": "^52.0.0",
+    "expo-av": "~15.0.1",
+    "expo-camera": "~16.0.7",
     "expo-cli": "^6.3.12",
+    "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
     "expo-linear-gradient": "~14.0.1",
     "expo-location": "~18.0.1",
+    "expo-media-library": "~17.0.3",
     "expo-status-bar": "~2.0.0",
     "g": "^2.0.1",
     "projeto": "file:",
@@ -39,7 +43,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "save": "^2.9.0",
-    "yarn": "^1.22.22"
+    "yarn": "^1.22.22",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
