--- a/app.json
+++ b/app.json
@@ -12,14 +12,23 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "Este aplicativo precisa de acesso à câmera para tirar fotos e gravar vídeos.",
+        "NSMicrophoneUsageDescription": "Este aplicativo precisa de acesso ao microfone para gravar áudio durante vídeos."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "CAMERA",
+        "AUDIO_RECORDING"
+      ]
     },
+    
     "web": {
       "favicon": "./assets/favicon.png"
     },
