--- a/package.json
+++ b/package.json
@@ -23,16 +23,21 @@
     "expo-cli": "^6.3.12",
     "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-location": "~18.0.1",
     "expo-media-library": "~17.0.3",
+    "expo-sharing": "~13.0.0",
     "expo-status-bar": "~2.0.0",
+    "expo-video": "^2.0.1",
     "g": "^2.0.1",
+    "jszip": "^3.10.1",
     "projeto": "file:",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
     "react-native-calendars": "^1.1307.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-navigation-bar-color": "^2.0.2",
@@ -42,6 +47,7 @@
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
+    "react-native-zip-archive": "^7.0.1",
     "save": "^2.9.0",
     "yarn": "^1.22.22",
     "zustand": "^5.0.1"
